Fix #375 (headings go off screen in some resolutions)

--- a/timApp/static/stylesheet.scss
+++ b/timApp/static/stylesheet.scss
@@ -138,8 +138,8 @@ a .glyphicon {
         @mixin heading-base($outdent) {
             text-align: left;
             margin-left: $outdent;
-            @media (max-width: $screen-sm + 6) {
-                margin-left: $outdent * 0.5;
+            @media (max-width: 870px) {
+                margin-left: $outdent * 0.6;
             }
             @media (max-width: $screen-xs-max) {
                 margin-left: 0;
